# BabyloveEntertainmentSystem-Emulator

./: .gitignore  CMakeLists.txt  README.md
src/: bes_main.c  bes_types.h
src/CPU/: bes_6502cpu.c  bes_6502cpu.h  bes_6502cpu_common.h  bes_6502cpu_instructions.c  bes_6502cpu_instructions.h
src/app/: CMakeLists.txt  bes_app.c  bes_app.h
src/app/gfx/: bes_window.c  bes_window.h
src/core/: CMakeLists.txt  bes_core.h
src/core/CPU/: bes_6502cpu.c  bes_6502cpu.h  bes_6502cpu_common.c  bes_6502cpu_common.h  bes_6502cpu_instructions.c  bes_6502cpu_instructions.h
src/core/utils/: bes_fileHandling.c  bes_fileHandling.h
test/: cpu_test.s
